ultimos cambios de estilo

--- a/src/index.html
+++ b/src/index.html
@@ -24,11 +24,11 @@
 
 <body style="height: 100%">
   <div class="flex-column container-fluid" style="height: 100%">
-    <div class="flex-row row">
+    <!-- <div class="flex-row row">
       <div class="flex-item">
         <acme-navbar />
       </div>
-    </div>
+    </div> -->
     <div class="flex-row flex-item row">
       <div class="flex-column flex-item col-xs-12 container">
         <div class="flex-row flex-item row">
