--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,12 @@
 <!doctype html>
-<html style="height: 100%" ng-app="angularSeedApp">
+<html ng-app="angularSeedApp">
 
 <head>
     <meta charset="utf-8">
-    <title>Kong</title>
+    <title>Kong Reformado</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
-    integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
-    crossorigin=""/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0/angular-material.css">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css({.tmp/serve,src}) styles/vendor.css -->
     <!-- bower:css -->
@@ -22,23 +20,10 @@
     <!-- endbuild -->
 </head>
 
-<body style="height: 100%">
-  <div class="flex-column container-fluid" style="height: 100%">
-    <!-- <div class="flex-row row">
-      <div class="flex-item">
-        <acme-navbar />
-      </div>
-    </div> -->
-    <div class="flex-row flex-item row">
-      <div class="flex-column flex-item col-xs-12 container">
-        <div class="flex-row flex-item row">
-          <div class="no-padding col-xs-3 flex-column">
-            <left-panel class="flex-column flex-item"/>
-          </div>
-          <div class="flex-column col-xs-9" ui-view></div>
-        </div>
-      </div>
-    </div>
+<body>
+  <div class="app">
+      <nav-bar></nav-bar>
+      <div class="col-md-12" ui-view></div>
   </div>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -56,12 +41,16 @@
     <!-- angular templates will be automatically converted in js and inserted here -->
     <!-- endinject -->
     <!-- endbuild -->
-    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+    <!-- <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
     integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-    crossorigin=""></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js"></script>
+    crossorigin=""></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet.heat/0.2.0/leaflet-heat.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.11/lodash.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/1.0.0/angular-chart.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-chart.js/1.0.0/angular-chart.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-animate.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-aria.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.0/angular-messages.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-material/1.1.0/angular-material.js"></script>
 </body>
 </html>
