primera vista sin funciones

--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
 </head>
 
 <body>
-  <div class="app">
+  <div class="app" flex layout="column">
       <nav-bar></nav-bar>
-      <div class="col-md-12" ui-view></div>
+      <div flex layout="column" ui-view></div>
   </div>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
