--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-  <div ng-class="{'in-game': view == 'missions.detail'}" class="app" flex layout="column">
+  <div ng-class="{'in-game': view == 'missions.detail', 'in-missions': view == 'missions'}" class="app" flex layout="column">
       <nav-bar></nav-bar>
       <md-sidenav flex class="md-sidenav-left" md-component-id="closeEventsDisabled"
       md-whiteframe="4" md-disable-close-events>
